// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MediaFormats view 1`] = `
<DocumentFragment>
  <div
    class="mediaFormats"
  >
    <h1>
      Test 2
    </h1>
    <table
      data-testid="media-formats-table"
    >
      <thead>
        <tr>
          <th>
            sulu_admin.title
          </th>
          <th>
            sulu_admin.key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="row-400x400"
        >
          <td>
            <button
              type="button"
            >
              su-eye
            </button>
          </td>
          <td>
            <button
              type="button"
            >
              su-copy
            </button>
          </td>
          <td>
            Contact
          </td>
          <td>
            400x400
          </td>
        </tr>
        <tr
          data-testid="row-800x800"
        >
          <td>
            <button
              type="button"
            >
              su-eye
            </button>
          </td>
          <td>
            <button
              type="button"
            >
              su-copy
            </button>
          </td>
          <td>
            Account
          </td>
          <td>
            800x800
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Render a loading MediaFormats view 1`] = `
<DocumentFragment>
  <div
    class="mediaFormats"
  >
    <h1>
      Test 1
    </h1>
    <div
      data-testid="loader"
    />
  </div>
</DocumentFragment>
`;

exports[`Render a loading MediaFormats view if formats have not been loaded yet 1`] = `
<DocumentFragment>
  <div
    class="mediaFormats"
  >
    <div
      data-testid="loader"
    />
  </div>
</DocumentFragment>
`;
